--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cb8df7">  <td>25/10/29 13:42:52</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Grande_Collection.OpenBrowser()[pri:0, instance:com.Merino.Grande_Collection@368247b9]">&gt;&gt;OpenBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="cb8df7">  <td>25/10/29 13:43:11</td>   <td>18684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_01_PageTitle()[pri:0, instance:com.Merino.Grande_Collection@368247b9]">TC_01_PageTitle</td> 
-  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="cb8df7">  <td>25/10/29 13:43:11</td>   <td>18934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_02_FormValidation()[pri:0, instance:com.Merino.Grande_Collection@368247b9]">TC_02_FormValidation</td> 
-  <td>main@1497377679</td>   <td></td> </tr>
+<tr bgcolor="cb8df7">  <td>25/10/30 18:11:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Grande_Collection.OpenBrowser()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@609656250</td>   <td></td> </tr>
+<tr bgcolor="cb8df7">  <td>25/10/30 18:12:07</td>   <td>12567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_01_PageTitle()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">TC_01_PageTitle</td> 
+  <td>main@609656250</td>   <td></td> </tr>
+<tr bgcolor="cb8df7">  <td>25/10/30 18:12:07</td>   <td>12626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_02_FormValidation()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">TC_02_FormValidation</td> 
+  <td>main@609656250</td>   <td></td> </tr>
+<tr bgcolor="cb8df7">  <td>25/10/30 18:12:20</td>   <td>24948</td> <td>&nbsp;</td><td title="&lt;&lt;Grande_Collection.TearDown()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@609656250</td>   <td></td> </tr>
 </table>
