--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\LYXELANDFLAMINGO\AppData\Local\Temp\testng-eclipse-874088649\testng-customsuite.xml</span>
+                    <span>C:\Users\LYXELANDFLAMINGO\AppData\Local\Temp\testng-eclipse-458626256\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.Merino.Grande_Collection" class="method navigator-link" hash-for-method="TC_02_FormSubmittion">TC_02_FormSubmittion</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.Merino.Grande_Collection" class="method navigator-link" hash-for-method="TC_02_FormSubmission">TC_02_FormSubmission</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -140,18 +140,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_02_FormSubmittion">
-                  </a> <!-- TC_02_FormSubmittion -->
-                  <span class="method-name">TC_02_FormSubmittion</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[text()=&apos;Thank you for your message. It has been sent.&apos;]&quot;}
-  (Session info: chrome=142.0.7444.59)
+                  <a name="TC_02_FormSubmission">
+                  </a> <!-- TC_02_FormSubmission -->
+                  <span class="method-name">TC_02_FormSubmission</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[contains(text(),&apos;Thank you for your message&apos;)]&quot;}
+  (Session info: chrome=142.0.7444.60)
 For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.29.0&apos;, revision: &apos;5fc1ec94cb&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.7&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [f67ea7d407a0629e229bcfc1067fbd28, findElement {value=//div[text()=&apos;Thank you for your message. It has been sent.&apos;], using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 142.0.7444.59, chrome: {chromedriverVersion: 142.0.7444.59 (4b8153ab58d3..., userDataDir: C:\Users\LYXELA~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50711}, goog:processID: 1796, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50711/devtoo..., se:cdpVersion: 142.0.7444.59, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: f67ea7d407a0629e229bcfc1067fbd28
+Command: [0b0338c80332adc3d41542117771e114, findElement {value=//div[contains(text(),&apos;Thank you for your message&apos;)], using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 142.0.7444.60, chrome: {chromedriverVersion: 142.0.7444.61 (9884f628acbc..., userDataDir: C:\Users\LYXELA~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58194}, goog:processID: 8840, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58194/devtoo..., se:cdpVersion: 142.0.7444.60, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 0b0338c80332adc3d41542117771e114
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -168,7 +168,7 @@ Session ID: f67ea7d407a0629e229bcfc1067fbd28
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
-	at com.Merino.Grande_Collection.TC_02_FormSubmittion(Grande_Collection.java:81)
+	at com.Merino.Grande_Collection.TC_02_FormSubmission(Grande_Collection.java:89)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -221,7 +221,7 @@ Session ID: f67ea7d407a0629e229bcfc1067fbd28
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LYXELANDFLAMINGO\AppData\Local\Temp\testng-eclipse-874088649\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LYXELANDFLAMINGO\AppData\Local\Temp\testng-eclipse-458626256\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -272,18 +272,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_02_FormSubmittion')
+data.setCell(0, 1, 'TC_02_FormSubmission')
 data.setCell(0, 2, 'com.Merino.Grande_Collection')
-data.setCell(0, 3, 21949);
+data.setCell(0, 3, 21722);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'TC_01_Verify_GrandeCollectionPageTitle')
 data.setCell(1, 2, 'com.Merino.Grande_Collection')
-data.setCell(1, 3, 180);
+data.setCell(1, 3, 38);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -316,17 +316,17 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">TC_01_Verify_GrandeCollectionPageTitle</span>
-                <span class="method-start">11595 ms</span>
+                <span class="method-start">11194 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">TC_02_FormSubmittion</span>
-                <span class="method-start">11778 ms</span>
+                <span class="method-name">TC_02_FormSubmission</span>
+                <span class="method-start">11238 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">33733 ms</span>
+                <span class="method-start">32966 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
