--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cb8df7">  <td>25/11/03 10:18:04</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Grande_Collection.OpenBrowser()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">&gt;&gt;OpenBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1574877131</td>   <td></td> </tr>
-<tr bgcolor="cb8df7">  <td>25/11/03 10:18:16</td>   <td>11586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_01_Verify_GrandeCollectionPageTitle()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">TC_01_Verify_GrandeCollectionPageTitle</td> 
-  <td>main@1574877131</td>   <td></td> </tr>
-<tr bgcolor="cb8df7">  <td>25/11/03 10:18:16</td>   <td>11769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_02_FormSubmittion()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">TC_02_FormSubmittion</td> 
-  <td>main@1574877131</td>   <td></td> </tr>
-<tr bgcolor="cb8df7">  <td>25/11/03 10:18:38</td>   <td>33725</td> <td>&nbsp;</td><td title="&lt;&lt;Grande_Collection.TearDown()[pri:0, instance:com.Merino.Grande_Collection@1c7696c6]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1574877131</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/06 13:31:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Grande_Collection.OpenBrowser()[pri:0, instance:com.Merino.Grande_Collection@20140db9]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894601438</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/06 13:31:29</td>   <td>11186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_01_Verify_GrandeCollectionPageTitle()[pri:1, instance:com.Merino.Grande_Collection@20140db9]">TC_01_Verify_GrandeCollectionPageTitle</td> 
+  <td>main@1894601438</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/06 13:31:29</td>   <td>11230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_02_FormSubmission()[pri:2, instance:com.Merino.Grande_Collection@20140db9]">TC_02_FormSubmission</td> 
+  <td>main@1894601438</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/06 13:31:51</td>   <td>32958</td> <td>&nbsp;</td><td title="&lt;&lt;Grande_Collection.TearDown()[pri:0, instance:com.Merino.Grande_Collection@20140db9]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1894601438</td>   <td></td> </tr>
 </table>
