--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cb8df7">  <td>25/10/29 14:10:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Grande_Collection.OpenBrowser()[pri:0, instance:com.Merino.Grande_Collection@368247b9]">&gt;&gt;OpenBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="cb8df7">  <td>25/10/29 14:10:20</td>   <td>12162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_02_FormValidation()[pri:0, instance:com.Merino.Grande_Collection@368247b9]">TC_02_FormValidation</td> 
-  <td>main@1904783235</td>   <td></td> </tr>
-<tr bgcolor="cb8df7">  <td>25/10/29 14:10:20</td>   <td>12096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_01_PageTitle()[pri:0, instance:com.Merino.Grande_Collection@368247b9]">TC_01_PageTitle</td> 
-  <td>main@1904783235</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/07 11:22:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Grande_Collection.OpenBrowser()[pri:0, instance:com.Merino.Grande_Collection@20140db9]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1231799381</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/07 11:22:52</td>   <td>14022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_01_Verify_GrandeCollectionPageTitle()[pri:1, instance:com.Merino.Grande_Collection@20140db9]">TC_01_Verify_GrandeCollectionPageTitle</td> 
+  <td>main@1231799381</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/07 11:23:16</td>   <td>38476</td> <td>&nbsp;</td><td title="&lt;&lt;Grande_Collection.TearDown()[pri:0, instance:com.Merino.Grande_Collection@20140db9]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1231799381</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>25/11/07 11:22:52</td>   <td>14085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Grande_Collection.TC_02_FormSubmission()[pri:2, instance:com.Merino.Grande_Collection@20140db9]">TC_02_FormSubmission</td> 
+  <td>main@1231799381</td>   <td></td> </tr>
 </table>
